manifests/awsIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: health
  annotations:
    external-dns.alpha.kubernetes.io/aws-evaluate-target-health: "true"
    external-dns.alpha.kubernetes.io/aws-health-check-id: 458260ba-be72-463c-9621-ec5157b90ec7
    external-dns.alpha.kubernetes.io/hostname: qualifier-backup-web-dev.dev-app.snglr.com
    external-dns.alpha.kubernetes.io/aws-failover: PRIMARY
    external-dns.alpha.kubernetes.io/set-identifier: main
    external-dns.alpha.kubernetes.io/alias: "true"
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
spec:
  rules:
    - host: qualifier-backup-web-dev.dev-app.snglr.com
      http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: health
                port:
                  number: 8080
