manifests/allowAuthPolicy.yaml
# Just allow any in/out communication in the "snglr-model-checker" namespace; This is so that we dont deny requests for Keycloak ie. the "authenticate.dev-snglr.com"

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-all
  namespace: istio-system
spec:
  action: ALLOW
  rules:
  - to:
    - operation:
        hosts: ["health.dev-app.snglr.com"]
